--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.quales-web-app</groupId>
-  <artifactId>quales-App</artifactId>
+  <groupId>org.liveet-web-app</groupId>
+  <artifactId>liveet-App</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>quales-web-app</name>
+  <name>liveet-web-app</name>
   <url>http://www.example.com</url>
 
 <!--  <properties>-->
